@@ -1,1 +1,0 @@
-libnvidia-cbl.so.#VERSION#		#LIBDIR#/
