@@ -1,17 +1,0 @@
-# The NVIDIA license does not allow any form of modification.
-spelling-error-in-binary
-hardening-no-bindnow
-hardening-no-fortify-functions
-
-# Use wildcard instead of exact path substitution, this is a M-A: same package.
-embedded-library zlib usr/lib*/libnvidia-cbl.so.#VERSION#
-
-# The libnvidia-cbl.so.* SONAME changes with every upstream
-# release.
-# These private libraries are only used (and usable) as plugins
-# loaded by other NVIDIA libraries with the same upstream version
-# (and a stable SONAME).
-# Therefore we do not include the SONAME in this package name to
-# avoid going through NEW for every new upstream release.
-package-name-doesnt-match-sonames libnvidia-cbl#VERSION#
-symbols-file-missing-build-depends-package-field
