@@ -23,6 +23,7 @@ nvidia-graphics-drivers (495.29.05-1) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * Update nv-readme.ids.
   * Drop libnvidia-ifr1 package, removed upstream.
+  * Drop libnvidia-cbl package, removed upstream.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 19 Oct 2021 23:08:37 +0200
 
